--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor v0.2.007</title>
+  <title>AsciiDoctor v0.2.008</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -361,25 +361,9 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 ====
 
 ++++
-<style type="text/css">
-.custom-footer {
-width: 100%;
-height: 34px;
-background-color: #333;
-color: #fff;
-}
-.custom-footer .footer-text {
-}
-.custom-footer .footer-text a {
-color: #fff;
-text-decoration: none;
-}
-</style>
-<div class="custom-footer">
-<center>
-<p class="footer-text"><small><a href="https://pcisew.cn/asciidoctor/">Made with ❤️ by Ezra</a></small></p>
-</center>
-</div>
+<footer style="border-top: solid #A44B4B; border-width: 15px; background: #2E2E2E; width:100%; height:120px;">
+  <p style="color: #424242; font-family: Lato; font-size: 20px; text-align: center; margin-top: 40px;">&copy;	MADE WITH ❤️ BY EZRA</p>
+</footer>
 ++++</textarea>
     <iframe id="preview"></iframe>
     <textarea class="css" id="css-content" style="display: none;"></textarea>
