--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -430,7 +430,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
       </select>
       <label>Footer：</label>
       <select id="footer-list">
-        <option value="NONE">None</option>
+        <option value="Default">Default</option>
         <option value="dard-red">Dark Red</option>
       </select>
       <label>&nbsp;Save：</label>
