--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -367,11 +367,11 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
     <span id="brand"><strong>AsciiDoctor</strong> <span id="filename"></span></span>
     <nav>
       <!-- <div id="dropbox" style="min-width: 40px; max-width: 110px; min-height: 24px; padding: 5px; border-width: 1px; border-color: #fff; border-style: solid;">DropZone</div> -->
-      <label>Adoc：</label>
+      <label>Adoc:</label>
       <input type='file' name="Open AsciiDoc" onchange='loadFile(this)' style="max-width: 140px;">
-  		<label>CSS：</label>
+  		<label>CSS:</label>
   		<input type='file' accept='text/css' name="Open Stylesheet" onchange='loadCss(this)' style="max-width: 140px;">
-      <label>Link：</label>
+      <label>Link:</label>
       <select id="css-list" style="max-width: 80px;">
         <option value="NONE">None</option>
         <optgroup label="Default">
@@ -428,12 +428,12 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
           <option value="material-red.css">material-red.css</option>
         </optgroup>
       </select>
-      <label>Footer：</label>
+      <label>Footer:</label>
       <select id="footer-list">
         <option value="Default">Default</option>
         <option value="dard-red">Dark Red</option>
       </select>
-      <label>&nbsp;Save：</label>
+      <label>Save:</label>
       <button type="button" onclick="saveDoc()">adoc</button>
       <button type="button" onclick="saveHTML()">html</button>
       <!--<form method="get" action="file.doc">
