ASCIIDOCTOR_LIVE_EDITOR

--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -1900,6 +1900,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 
   </script>
   <!-- DOWNLOAD.JS -->
+<!--
   <script type="text/javascript">
       //download.js v4.2, by dandavis; 2008-2016. [CCBY2] see http://danml.com/download.html for tests/usage
 // v1 landed a FF+Chrome compat way of downloading strings to local un-named files, upgraded to use a hidden frame and optional mime
@@ -1939,7 +1940,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 			blob,
 			reader;
 			myBlob= myBlob.call ? myBlob.bind(self) : Blob ;
-	  
+
 		if(String(this)==="true"){ //reverse arguments, allowing download.bind(true, "text/xml", "export.xml") to act as a callback
 			payload=[payload, mimeType];
 			mimeType=payload[0];
@@ -1954,7 +1955,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
         		var ajax=new XMLHttpRequest();
         		ajax.open( "GET", url, true);
         		ajax.responseType = 'blob';
-        		ajax.onload= function(e){ 
+        		ajax.onload= function(e){
 				  download(e.target.response, fileName, defaultMime);
 				};
         		setTimeout(function(){ ajax.send();}, 0); // allows setting custom ajax headers using the return:
@@ -1965,16 +1966,16 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 
 		//go ahead and download dataURLs right away
 		if(/^data\:[\w+\-]+\/[\w+\-]+[,;]/.test(payload)){
-		
+
 			if(payload.length > (1024*1024*1.999) && myBlob !== toString ){
 				payload=dataUrlToBlob(payload);
 				mimeType=payload.type || defaultMime;
-			}else{			
+			}else{
 				return navigator.msSaveBlob ?  // IE10 can't do a[download], only Blobs:
 					navigator.msSaveBlob(dataUrlToBlob(payload), fileName) :
 					saver(payload) ; // everyone else can save dataURLs un-processed
 			}
-			
+
 		}//end if dataURL passed?
 
 		blob = payload instanceof myBlob ?
@@ -2061,9 +2062,9 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 		}
 		return true;
 	}; /* end download() */
-}));  
-
+}));
   </script>
+-->
 	<script type="text/javascript">
         function set_select_checked(selectId, checkValue){
           var select = document.getElementById(selectId);
@@ -2219,9 +2220,12 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 			    //alert('ERROR!');
 			} else {
 			    if (fn != null && fn != "") {
-			        download(new Blob([dataText]), fn, 'text/' + mime);
+              document.getElementById('adoc-name').value = name;
+			        //download(new Blob([dataText]), fn, 'text/' + mime);
+              window.open(dataText, '_blank');
         			} else {
-                    download(new Blob([dataText]), 'UNTITLED.' + ext, 'text/' + mime);
+                    //download(new Blob([dataText]), 'UNTITLED.' + ext, 'text/' + mime);
+                    window.open(dataText, '_blank');
 			    }
 			}
 		};
@@ -2231,7 +2235,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 		};
 		function saveHTML() {
 			var iframe = document.getElementById('preview');
-			var fn = 
+			var fn =
 			saveText(iframe.srcdoc, 'html', getADocName(), 'html');
 		};
 	</script>
@@ -2258,7 +2262,8 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
     }*/
   </script>
 
-  <!--<script type="text/javascript">
+<!--
+  <script type="text/javascript">
     var dropbox = document.getElementById('dropbox');
 
     dropbox.addEventListener('dragenter', noopHandler, false);
@@ -2332,7 +2337,8 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
         readfirstfile(e.dataTransfer.files);
       }
     }
-  </script>-->
+  </script>
+-->
 
 </body>
 
