--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor v0.2.015</title>
+  <title>AsciiDoctor v0.2.016</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -2220,22 +2220,23 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 			    //alert('ERROR!');
 			} else {
 			    if (fn != null && fn != "") {
-            saveLink(fn + '.' + ext, content, mime);
+            saveByLink(fn + '.' + ext, content, mime);
               document.getElementById('adoc-name').value = fn;
 			        // download(new Blob([dataText]), fn + '.' + ext, 'text/' + mime);
               // window.open(dataText, '_blank');
     			} else {
               // download(new Blob([dataText]), 'UNTITLED.' + ext, 'text/' + mime);
               // window.open(dataText, '_blank');
-              saveLink('UNTITLED.' + ext, content, mime);
+              saveByLink('UNTITLED.' + ext, content, mime);
 			    }
       }
 		};
-    function saveLink(fn, content, mime) {
+    function saveByLink(fn, content, mime) {
       var textFileAsBlob = new Blob([ content ], { type: 'text/' + mime });
       var downloadLink = document.createElement("a");
       downloadLink.download = fn;
       downloadLink.innerHTML = 'Download ' + fn;
+      downloadLink.target = "_blank";
       if (window.webkitURL != null) {
         // Chrome allows the link to be clicked without actually adding it to the DOM.
         downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
@@ -2258,8 +2259,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 		};
 		function saveHTML() {
 			var iframe = document.getElementById('preview');
-			var fn =
-			saveText(iframe.srcdoc, 'html', getADocName(), 'html');
+			var fn = saveText(iframe.srcdoc, 'html', getADocName(), 'html');
 		};
 	</script>
 
