--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor v0.2.016</title>
+  <title>AsciiDoctor v0.2.020</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -431,6 +431,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
       <label>Footer:</label>
       <select id="footer-list">
         <option value="Default">Default</option>
+        <option value="simple">Simple</option>
         <option value="dark-red">Dark Red</option>
       </select>
       <label>Save:</label>
@@ -2082,11 +2083,21 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 			var footer_content = '';
 			switch (footer_selected) {
 			  case 'dark-red':
-			  footer_content += '\n\n';
-			  footer_content += '++++\n';
-			  footer_content += '<footer style="border-top: solid #A44B4B; border-width: 15px; background: #2E2E2E; width:100%; height:120px;"><p style="color: #424242; font-family: Lato; font-size: 20px; text-align: center; margin-top: 40px;">&copy;	MADE WITH ❤️ BY EZRA</p></footer>';
-			  footer_content += '\n++++';
+  			  footer_content += '\n\n';
+  			  footer_content += '++++\n';
+  			  footer_content += '<footer style="border-top: solid #A44B4B; border-width: 15px; background: #2E2E2E; width:100%; height:120px;"><p style="color: #424242; font-family: Lato; font-size: 20px; text-align: center; margin-top: 40px;">&copy;	MADE WITH ❤️ BY EZRA</p></footer>';
+  			  footer_content += '\n++++';
 			    break;
+        case 'simple':
+          footer_content += '\n\n---\n\n\n[.text-center]\n[.small]#Made with ❤️ by ';
+          var fn = prompt("Filename", name);
+    			if (fn === null) {
+    			  footer_content += 'Ezra';
+    			} else {
+            footer_content += fn;
+          }
+          footer_content += '#';
+          break;
 			  default:
 			}
 			content += footer_content;
