--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor v0.2.021</title>
+  <title>AsciiDoctor v0.2.022</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -2096,7 +2096,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
   			  footer_content += '\n++++';
 			    break;
         case 'simple':
-          footer_content += '\n\n---\n\n\n[.text-center]\n[.small]#Made with ❤️ by ';
+          footer_content += '\n\n---\n\n\n[.text-center]\n[.small]#Made with ❤️ ';
           var fn = prompt("Footer prompt", 'by Ezra');
     			if (fn === null) {
     			  footer_content += 'by Ezra';
