--- a/_creative/ef1error.html
+++ b/_creative/ef1error.html
@@ -8,6 +8,7 @@ cover:
   url: 'ef1error.png'
   format: 'png'
 display: false
+author_link: "https://picsew.cn/assets/images/wechatqrcode.png"
 ---
 <!DOCTYPE html>
 <html lang="en">
