--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor v0.2.022</title>
+  <title>AsciiDoctor v0.2.023</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -391,6 +391,8 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
           <option value="adoc-rocket-panda.css">adoc-rocket-panda.css</option>
         </optgroup>
         <optgroup label="Try">
+          <option value="github-light.css">github-light.css</option>
+          <option value="github-dark.css">github-dark.css</option>
           <option value="ubuntu.css">ubuntu.css</option>
           <option value="monospace.css">monospace.css</option>
           <option value="gazette.css">gazette.css</option>
