--- a/asciidoctor/syntax/previews/asciidoctor.html
+++ b/asciidoctor/syntax/previews/asciidoctor.html
@@ -626,7 +626,7 @@ pre.pygments .tok-il { color: #666666 } /* Literal.Number.Integer.Long */
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="https://picsew.cn/assets/images/posts/content/md_standards.png" alt="md standards">
+<img src="https://picsew.cn/assets/adocsyntax/images/md_standards.png" alt="md standards">
 </div>
 <div class="title">Figure 1. Markdown Standards</div>
 </div>
@@ -915,7 +915,7 @@ pre.pygments .tok-il { color: #666666 } /* Literal.Number.Integer.Long */
 <div class="listingblock">
 <div class="content">
 <pre class="pygments highlight"><code data-lang="asciidoc"><span></span>[.right.text-center]
-image::{image}/avatar/oschina_200.jpg[OSChina,200,200]</code></pre>
+image::{image}/avatar.png[Avatar,200,200]</code></pre>
 </div>
 </div>
 </div>
@@ -966,14 +966,14 @@ image::{image}/avatar/oschina_200.jpg[OSChina,200,200]</code></pre>
 <h4 id="_行内图片_inline_images"><a class="anchor" href="#_行内图片_inline_images"></a><a class="link" href="#_行内图片_inline_images">2.9.1. 行内图片 Inline Images</a></h4>
 <div class="listingblock">
 <div class="content">
-<pre class="pygments highlight"><code data-lang="asciidoc"><span></span>An image image:{image}/avatar/oschina_200.jpg[some, 50] here.</code></pre>
+<pre class="pygments highlight"><code data-lang="asciidoc"><span></span>An image image:{image}/avatar.png[Avatar, 50] here.</code></pre>
 </div>
 </div>
 <div class="exampleblock">
 <div class="title">Example 12. result</div>
 <div class="content">
 <div class="paragraph">
-<p>An image <span class="image"><img src="https://picsew.cn/assets/images/avatar/oschina_200.jpg" alt="some" width="50"></span> here.</p>
+<p>An image <span class="image"><img src="https://picsew.cn/assets/adocsyntax/images/avatar.png" alt="Avatar" width="50"></span> here.</p>
 </div>
 </div>
 </div>
@@ -982,7 +982,7 @@ image::{image}/avatar/oschina_200.jpg[OSChina,200,200]</code></pre>
 <h4 id="_块图片_block_images"><a class="anchor" href="#_块图片_block_images"></a><a class="link" href="#_块图片_block_images">2.9.2. 块图片 Block Images</a></h4>
 <div class="listingblock">
 <div class="content">
-<pre class="pygments highlight"><code data-lang="asciidoc"><span></span>image::{image}/avatar/oschina_200.jpg[caption=&quot;Caption: &quot;, title=&quot;Blocked Image&quot;, 100]</code></pre>
+<pre class="pygments highlight"><code data-lang="asciidoc"><span></span>image::{image}/avatar.png[caption=&quot;Caption: &quot;, title=&quot;Blocked Image&quot;, 100]</code></pre>
 </div>
 </div>
 <div class="exampleblock">
@@ -990,7 +990,7 @@ image::{image}/avatar/oschina_200.jpg[OSChina,200,200]</code></pre>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="https://picsew.cn/assets/images/avatar/oschina_200.jpg" alt="oschina 200" height="100">
+<img src="https://picsew.cn/assets/adocsyntax/images/avatar.png" alt="avatar" height="100">
 </div>
 <div class="title">Caption: Blocked Image</div>
 </div>
@@ -1014,7 +1014,7 @@ video::video_file.mp4[width=640, start=60, end=140, options=autoplay]</code></pr
 <div class="content">
 <div class="videoblock">
 <div class="content">
-<video src="https://picsew.cn/assets/videos/wow.mp4" width="200" poster="WOW" controls>
+<video src="https://picsew.cn/assets/adocsyntax/videos/wow.mp4" width="200" poster="WOW" controls>
 Your browser does not support the video tag.
 </video>
 </div>
@@ -2275,7 +2275,7 @@ include::./index.adoc[lines=1..5]
 <div class="content">
 <pre class="pygments highlight"><code data-lang="asciidoc"><span></span>:doctitle: AsciiDoc Guide
 :home: https://picsew.cn
-:assets: {home}/assets
+:assets: {home}/assets/adocsyntax
 :image: {assets}/images
 :video: {assets}/videos</code></pre>
 </div>
@@ -2463,7 +2463,7 @@ include::./index.adoc[lines=1..5]
 <div id="footer">
 <div id="footer-text">
  1.1.0<br>
-Last updated 2021-11-08 15:19:55 +0800
+Last updated 2021-11-08 15:27:48 +0800
 </div>
 </div>
 </body>
